force-app/main/default/objects/C_Question_Response__c/C_Question_Response__c.object-meta.xml
<CustomObject>
    <description>Individual question answer within a form submission</description>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>