force-app/main/default/objects/C_Question_Response__c/fields/C_Question__c.field-meta.xml
<CustomField>
    <fullName>C_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>C_Question__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>C_Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>