force-app/main/default/objects/C_Question_Response__c/fields/C_Question_Type__c.field-meta.xml
<CustomField>
    <fullName>C_Question_Type__c</fullName>
    <label>Question Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>