force-app/main/default/objects/C_Question_Response__c/fields/C_Question_Weight__c.field-meta.xml
<CustomField>
    <fullName>C_Question_Weight__c</fullName>
    <label>Question Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>