force-app/main/default/objects/C_Question_Response__c/fields/C_Response_Details__c.field-meta.xml
<CustomField>
    <fullName>C_Response_Details__c</fullName>
    <label>Response Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>