force-app/main/default/objects/C_Question_Response__c/fields/C_Response_Points__c.field-meta.xml
<CustomField>
    <fullName>C_Response_Points__c</fullName>
    <label>Response Points</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>