force-app/main/default/objects/C_Question_Response__c/fields/C_Section_Response__c.field-meta.xml
<CustomField>
    <fullName>C_Section_Response__c</fullName>
    <label>Section Response</label>
    <referenceTo>C_Section_Response__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>C_Question_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>