force-app/main/default/objects/C_Question_Response__c/fields/C_Table_Data__c.field-meta.xml
<CustomField>
    <fullName>C_Table_Data__c</fullName>
    <label>Table Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>