force-app/main/default/objects/C_Question_Response__c/listViews/All_Question_Responses.listView-meta.xml
<ListView>
    <fullName>All_Question_Responses</fullName>
    <columns>NAME</columns>
    <columns>C_Section_Response__c</columns>
    <columns>C_Question_Text__c</columns>
    <columns>C_Response_Text__c</columns>
    <columns>C_Response_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Question Responses</label>
</ListView>